# AbPyTools-Qt

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  cmake_install.cmake
3rd_Party_/: CMakeLists.txt
3rd_Party_/qcustomplot/: CMakeLists.txt
3rd_Party_/qcustomplot/src/: qcustomplot.cpp
_3rdParty/Hunter/: install-root-dir
_3rdParty/Hunter/config-id/: config.cmake
_3rdParty/Hunter/toolchain/: toolchain.info
_3rdParty/Hunter/toolchain/_builds/: CMakeCache.txt  Makefile  cmake_install.cmake
backend/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
backend/abpytools/: CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake
backend/abpytools-cpp/: CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake
backend/abpytools-cpp/include/: chainCollectionCPP.h  pca.h  queryAbnum.h
backend/abpytools-cpp/src/: chainCollectionCPP.cpp  pca.cpp
backend/abpytools-cpp/tests/: AbPyToolsCPPTestSuite.cpp  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
backend/abpytools/include/: chain.h
backend/abpytools/src/: chain.cpp  main.cpp
backend/abpytools/tests/: AbPyToolsPyCInterfaceTestSuite.cpp  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  simpleTest.cpp
backend/machine-learning/: CMakeLists.txt
backend/machine-learning/cluster/: CMakeLists.txt
backend/machine-learning/cluster/include/: cluster.h  kmeans.h
backend/machine-learning/cluster/src/: cluster.cpp  kmeans.cpp
backend/machine-learning/cluster/tests/: CMakeLists.txt  ClusterTestSuite.cpp
backend/machine-learning/decomposition/: CMakeLists.txt
backend/machine-learning/decomposition/include/: pca.h
backend/machine-learning/decomposition/src/: pca.cpp
backend/machine-learning/decomposition/tests/: CMakeLists.txt  PCATestSuite.cpp
backend/parsers/: CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake
backend/parsers/data/: abraham.hpb  argos.hpb  chothia.hpb  consensus.hpb  cornette.hpb  heijne.hpb  hopp.hpb  janin.hpb  jones.hpb  kyte.hpb  omh.hpb  prift.hpb  prift_N.hpb  tanford.hpb  templ.hpb  test.fasta  wolfenden.hpb  zimmr.hpb
backend/parsers/include/: fastaParser.h  hydrophobicityParser.h  parser.h
backend/parsers/src/: FastaParser.cpp  fastaParser.cpp  hydrophobicityParser.cpp  parser.cpp
backend/parsers/tests/: AbPyToolsCppParserTests.cpp  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
backend/utils/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
backend/utils/include/: abpytools_exceptions.h  connection_check.h  exception.h
backend/utils/src/: abpytools_exceptions.cpp  connection_check.cpp
cmake/: FindAbPyTools.cmake  FindMLPACK.cmake  FindNumpy.cmake
cmake/Hunter/: config.cmake
cmake/Hunter/disabled-mode/: BoostConfig.cmake
devtools/travis-ci/: install_abpytools.sh  install_libraries.sh  install_miniconda.sh
docs/: pull_request_template.md
gui/: AbPytools-Qt.pro  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  sprites.qrc
gui/include/: abnumConnectionThread.h  abnumConnectionWorker.h  chainGroups.h  editdialog.h  fileloaderdialog.h  hydrophobicityGroup.h  mainwindow.h  newgroupdialog.h  newsequencedialog.h
gui/src/: abnumConnectionThread.cpp  abnumConnectionWorker.cpp  chainGroups.cpp  editdialog.cpp  fileloaderdialog.cpp  hydrophobicityGroup.cpp  main.cpp  mainwindow.cpp  newgroupdialog.cpp  newsequencedialog.cpp  qcustomplot.cpp
gui/tests/: AbPyToolsGUITestSuite.cpp  CMakeLists.txt
gui/ui/: editdialog.ui  fileloaderdialog.ui  mainwindow.ui  newgroupdialog.ui  newsequencedialog.ui
